--- a/includes/masterthesis-vars.sty
+++ b/includes/masterthesis-vars.sty
@@ -1,28 +1,29 @@
-\ProvidesPackage{masterthesis-vars}[2019/05/07 Master Thesis Variables]
+\ProvidesPackage{masterthesis-vars}[2024/01/08 Master Thesis Variables]
 
-\title{An Analysis of Share Movement and Sentiment of Tweets: Detailed Analysis of Automotive Companies.}
-\author{David Kovacs, MSc}
+\title{Mouse Micro CT Segmentation}
+\author{Stefan Rohrbacher, BSc}
 \newcommand{\matriculationNumber}{00851488}
-\newcommand{\thesiskeywords}{Efficient Market Hypothesis,Stock Price,Twitter,Sentiment Classification}
-\newcommand{\advisor}{Priv.-Doz. Dr. Dr. Ingo Feinerer}
+\newcommand{\thesiskeywords}{Slicer, CT, Segmentation}
+\newcommand{\advisor}{Dr. Michael Rauter}
 \newcommand{\study}{Master's Programme}
-\newcommand{\institutename}{Informatics}
-\newcommand{\studyprogram}{Software Architecture and Design}
+\newcommand{\institutename}{Medicine}
+\newcommand{\studyprogram}{MedTech}
 \newcommand{\place}{Wiener Neustadt}
 \newcommand{\thesissubject}{Master's Thesis}
-\newcommand{\thesisdate}{\printdate{2019-05-04}}
+\newcommand{\thesisdate}{\printdate{2024-01-08}} %todo
+\renewcommand{\contentsname}{Table of Contents}
 
 
-\newcommand{\hyundai}{Hyundai Motor Company}
-\newcommand{\ford}{Ford Motor Company}
-\newcommand{\gm}{General Motors Company}
-\newcommand{\toyota}{Toyota Motor Corporation}
-\newcommand{\vw}{Volkswagen AG}
+ \newcommand{\hyundai}{Hyundai Motor Company}
+ \newcommand{\ford}{Ford Motor Company}
+ \newcommand{\gm}{General Motors Company}
+ \newcommand{\toyota}{Toyota Motor Corporation}
+ \newcommand{\vw}{Volkswagen AG}
 
-\newcommand{\tb}{TextBlob}
-\newcommand{\nb}{\ac{NB}}
-\newcommand{\me}{\ac{ME}}
-\newcommand{\svm}{\ac{SVM}}
+ \newcommand{\tb}{TextBlob}
+ \newcommand{\nb}{\ac{NB}}
+ \newcommand{\me}{\ac{ME}}
+ \newcommand{\svm}{\ac{SVM}}
 
 \newcommand{\ftb}{$S_{TB}$}
 \newcommand{\fnb}{$S_{NB}$}
