--- a/includes/thesis/part01-page2-declaration.tex
+++ b/includes/thesis/part01-page2-declaration.tex
@@ -3,7 +3,7 @@
 \vspace{150pt}
 
 \begin{center}
-{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{DECLARATION OF INTEGRITY}}
+	{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{DECLARATION OF INTEGRITY}}
 \end{center}
 
 \vspace{30pt}
@@ -18,10 +18,10 @@ Ich erkläre an Eides statt, dass diese Arbeit ausschließlich von mir selbst ve
 \vspace{130pt}
 
 \begin{center}
-\begin{tabular}{p{3.8cm} >{\centering}p{3cm} p{.9cm} >{\centering}p{6cm}}
-    \place, & \thesisdate & &  \\ \cline{2-2} \cline{4-4}
-       & Date &  & Signature \\
-\end{tabular}
+	\begin{tabular}{p{3.8cm} >{\centering}p{3cm} p{.9cm} >{\centering}p{6cm}}
+		\place, & \thesisdate & \hspace{0.1cm}             \\ \cline{2-2} \cline{4-4}
+		        & Date        &                & Signature \\
+	\end{tabular}
 \end{center}
 
 \clearpage
