--- a/includes/fhwn-masterthesis.cls
+++ b/includes/fhwn-masterthesis.cls
@@ -8,11 +8,11 @@
 %'oneside' specifies that the pages will be printed on one sides of a every page. If you want to print on both sides of your pages use the parameter 'twoside'. Remember to order the printing job on one side of every page!!!
 
 
-    %%%%------------------PREAMBLE----------------%%%%
-    %%----------------------------------------------%%
+%%%%------------------PREAMBLE----------------%%%%
+%%----------------------------------------------%%
 
-    %%%%%-------------------PACKAGES-----------------%%%%% 
-    
+%%%%%-------------------PACKAGES-----------------%%%%%
+
 %\RequirePackage[utf8]{inputenc}
 \RequirePackage[a4paper,top=25mm,bottom=30mm,left=30mm,right=25mm]{geometry}   %allows to change margins and distances within the page's frame. Be careful with this tool. Remember to delete the frame!!!!
 
@@ -56,10 +56,10 @@
 % \setmainfont{Tw Cen MT}
 \setmainfont{MyFont.TTF}%Tw Cen MT
 [Ligatures=TeX,
-    Path=includes/fonts/,
-    BoldFont=MyFont_Bold.TTF,
-    ItalicFont=MyFont_Italic.TTF,
-BoldItalicFont=MyFont_BoldItalic.TTF]
+	Path=includes/fonts/,
+	BoldFont=MyFont_Bold.TTF,
+	ItalicFont=MyFont_Italic.TTF,
+	BoldItalicFont=MyFont_BoldItalic.TTF]
 
 \RequirePackage{xcolor}
 \definecolor{header-blue}{RGB}{22,48,114}
@@ -74,7 +74,7 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 \titleformat{\section}[hang]{\bfseries\large\color{header-blue}}{\makebox[1.27cm][l]{\thesection}}{0pt}{}[]
 \titlespacing*{\section}{0pt}{6pt}{12pt}
 
-\titleformat{\subsection}[hang]{\bfseries\normalsize\color{header-blue}}{\makebox[1.5cm][l]{\thesubsection}}{0pt}{}[] 
+\titleformat{\subsection}[hang]{\bfseries\normalsize\color{header-blue}}{\makebox[1.5cm][l]{\thesubsection}}{0pt}{}[]
 \titlespacing*{\subsection}{0pt}{6pt}{12pt}
 
 \titleformat{\subsubsection}[hang]{\bfseries\normalsize\color{header-blue}}{\makebox[1.5cm][l]{\thesubsubsection}}{0pt}{}[]
@@ -83,7 +83,7 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 \titleformat{\paragraph}[hang]{\bfseries\normalsize\color{header-blue}}{\makebox[2.5cm][l]{\theparagraph}}{0pt}{}[]
 \titlespacing*{\paragraph}{0pt}{6pt}{12pt}
 
-% \RequirePackage{fancyhdr}
+\RequirePackage{fancyhdr}
 
 % \fancypagestyle{mystyle}{
 %     \fancyhf{} %Clear Everything.
@@ -114,9 +114,9 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 \RequirePackage[section]{placeins}
 \makeatletter
 \AtBeginDocument{%
-  \expandafter\renewcommand\expandafter\subsection\expandafter{%
-    \expandafter\@fb@secFB\subsection
-  }%
+	\expandafter\renewcommand\expandafter\subsection\expandafter{%
+		\expandafter\@fb@secFB\subsection
+	}%
 }
 \makeatother
 
@@ -124,8 +124,8 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 
 \RequirePackage{smartdiagram}
 \usetikzlibrary{calc,trees,positioning,arrows,chains,shapes.geometric,%
-    decorations.pathreplacing,decorations.pathmorphing,shapes,%
-    matrix,shapes.symbols}
+	decorations.pathreplacing,decorations.pathmorphing,shapes,%
+	matrix,shapes.symbols}
 
 \renewcommand{\labelitemii}{-}
 \renewcommand{\labelitemi}{--}
@@ -133,11 +133,11 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 \newcolumntype{!}{>{\global\let\currentrowstyle\relax}}
 \newcolumntype{^}{>{\currentrowstyle}}
 \newcommand{\rowstyle}[1]{\gdef\currentrowstyle{#1}%
-  #1\ignorespaces
+	#1\ignorespaces
 }
 
 \RequirePackage[backend=bibtex,style=authoryear,sorting=anyvt,natbib=true]{biblatex}
-\clubpenalty = 10000 
+\clubpenalty = 10000
 \widowpenalty = 10000
 \displaywidowpenalty = 10000
 
@@ -147,30 +147,30 @@ BoldItalicFont=MyFont_BoldItalic.TTF]
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
 
 \lstset{ %
-  %backgroundcolor=\color{mylightgray},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
-  basicstyle=\linespread{0.8}\footnotesize,        % the size of the fonts that are used for the code
+	%backgroundcolor=\color{mylightgray},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+	basicstyle=\linespread{0.8}\footnotesize,        % the size of the fonts that are used for the code
 	%basicstyle=\small\sffamily,
-  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
-  breaklines=true,                 % sets automatic line breaking
-  captionpos=t,                    % sets the caption-position to bottom
-  commentstyle=\color{mygreen},    % comment style
-  deletekeywords={...},            % if you want to delete keywords from the given language
-  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
-  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
-  frame=tb,                    % adds a frame around the code
-  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
-  keywordstyle=\color{blue},       % keyword style
-  %language=Octave,                 % the language of the code
-  morekeywords={*,...},            % if you want to add more keywords to the set
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
-  numbersep=5pt,                   % how far the line-numbers are from the code
-  numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
-  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
-  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
-  showstringspaces=false,          % underline spaces within strings only
-  showtabs=false,                  % show tabs within strings adding particular underscores
-  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
-  stringstyle=\color{mymauve},     % string literal style
-  tabsize=2,                       % sets default tabsize to 2 spaces
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+	breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+	breaklines=true,                 % sets automatic line breaking
+	captionpos=t,                    % sets the caption-position to bottom
+	commentstyle=\color{mygreen},    % comment style
+	deletekeywords={...},            % if you want to delete keywords from the given language
+	escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+	extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+	frame=tb,                    % adds a frame around the code
+	keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+	keywordstyle=\color{blue},       % keyword style
+	%language=Octave,                 % the language of the code
+	morekeywords={*,...},            % if you want to add more keywords to the set
+	numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+	numbersep=5pt,                   % how far the line-numbers are from the code
+	numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
+	rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+	showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+	showstringspaces=false,          % underline spaces within strings only
+	showtabs=false,                  % show tabs within strings adding particular underscores
+	stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
+	stringstyle=\color{mymauve},     % string literal style
+	tabsize=2,                       % sets default tabsize to 2 spaces
+	title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
 }
