--- a/includes/proposal/Content.tex
+++ b/includes/proposal/Content.tex
@@ -20,6 +20,7 @@
 \clearpage
 
 \section{Introduction}
+\sffamily
 Over the last decades many researchers studied the stock market and tried to analyze and build a model for stock price prediction.
 Several of them followed the efficient market hypothesis \cite{Basu1977,Fama1995,Malkiel2003} which states that the stock market fully reflects all available information.
 Due to this assumption price changes can be just be triggered by new or changed information.
@@ -33,7 +34,7 @@ They tried to incorporate the public mood and apply it to prediction models of s
 The source of analyzed data has been news for a long time and in recent times social media.
 Social media is very interesting due the fact that many people are stating their opinion unfiltered publicly.
 Twitter is a well known social media where users can post their opinions publicly and categorize them using hashtags.
-
+\rmfamily
 \section{Background} 
 \label{s:background}
 
