--- a/proposal.tex
+++ b/proposal.tex
@@ -7,7 +7,7 @@
 \usepackage{titletoc}
 \renewcommand{\contentsname}{Table of Contents}
 
-\addtokomafont{disposition}{\MyFont}
+%%\addtokomafont{disposition}{\MyFont}
 
 \usepackage{helvet}
 
@@ -34,7 +34,7 @@
 
 %\backmatter
 
-%\include{includes/thesis/part03-page1-bibliography}
+\include{includes/proposal/part03-page1-bibliography}
 %\include{includes/thesis/part03-page2-listoffigures}
 %\include{includes/thesis/part03-page3-listoftables}
 %\include{includes/thesis/part03-page4-appendix}
