--- a/includes/proposal/part01-page1-titlepage.tex
+++ b/includes/proposal/part01-page1-titlepage.tex
@@ -26,7 +26,7 @@
 	\tabto{2cm}STUDENT NAME: \tabto{7cm}\textbf{\@author} \\
 	\tabto{2cm}STUDENT ID: \tabto{7cm}\textbf{\matriculationNumber} \\
 	\tabto{2cm}COURSE NAME: \tabto{7cm}\textbf{\study}\\
-	\tabto{7cm}\textbf{\institutename}
+	%%\tabto{7cm}\textbf{\institutename}
 	\tabto{7cm}\textbf{\studyprogram} \\
 	\vspace{15pt}
 	\tabto{2cm}SUPERVISOR: \tabto{7cm}\textbf{\advisor}
