--- a/proposal.tex
+++ b/proposal.tex
@@ -1,7 +1,10 @@
 \documentclass{./includes/proposal/fhwn-masterthesis}
 \usepackage{./includes/proposal/masterthesis-vars}
 \usepackage{./includes/proposal/masterthesis-definitions}
-
+\usepackage{lipsum}
+\usepackage{pifont}
+\usepackage{amssymb}
+\usepackage[clockwise]{rotating}
 \counterwithout{section}{chapter}
 \usepackage{fancyhdr}
 \usepackage{titletoc}
