--- a/includes/proposal/masterthesis-vars.sty
+++ b/includes/proposal/masterthesis-vars.sty
@@ -3,27 +3,28 @@
 \title{Mouse Micro CT Segmentation}
 \author{Stefan Rohrbacher, BSc}
 \newcommand{\matriculationNumber}{00851488}
-\newcommand{\thesiskeywords}{Slicer, CT, Segmentation}
-\newcommand{\advisor}{Dr. Michael Rauter}
+\newcommand{\thesiskeywords}{3DSlicer, microCT, Segmentation}
+\newcommand{\advisor}{Dipl.-Ing. Michael Rauter}
 \newcommand{\study}{Master's Programme}
-\newcommand{\institutename}{Medicine}
+%%\newcommand{\institutename}{Medicine}
 \newcommand{\studyprogram}{MedTech}
 \newcommand{\place}{Wiener Neustadt}
 \newcommand{\thesissubject}{Master's Thesis}
-\newcommand{\thesisdate}{\printdate{2024-01-08}} %todo
+%%\newcommand{\thesisdate}{\printdate{2024-01-08}} %todo
+\newcommand{\thesisdate}{\today} %todo
 \renewcommand{\contentsname}{Table of Contents}
 
 
- \newcommand{\hyundai}{Hyundai Motor Company}
- \newcommand{\ford}{Ford Motor Company}
- \newcommand{\gm}{General Motors Company}
- \newcommand{\toyota}{Toyota Motor Corporation}
- \newcommand{\vw}{Volkswagen AG}
+\newcommand{\hyundai}{Hyundai Motor Company}
+\newcommand{\ford}{Ford Motor Company}
+\newcommand{\gm}{General Motors Company}
+\newcommand{\toyota}{Toyota Motor Corporation}
+\newcommand{\vw}{Volkswagen AG}
 
- \newcommand{\tb}{TextBlob}
- \newcommand{\nb}{\ac{NB}}
- \newcommand{\me}{\ac{ME}}
- \newcommand{\svm}{\ac{SVM}}
+\newcommand{\tb}{TextBlob}
+\newcommand{\nb}{\ac{NB}}
+\newcommand{\me}{\ac{ME}}
+\newcommand{\svm}{\ac{SVM}}
 
 \newcommand{\ftb}{$S_{TB}$}
 \newcommand{\fnb}{$S_{NB}$}
