--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -796,6 +796,24 @@
   file = {/home/ro/Zotero/storage/4N6R9QKC/Lu et al. - 2020 - Wearable Health Devices in Health Care Narrative .pdf}
 }
 
+@article{mandoliniComparisonThree3D2022,
+  title = {Comparison of {{Three 3D Segmentation Software Tools}} for {{Hip Surgical Planning}}},
+  author = {Mandolini, Marco and Brunzini, Agnese and Facco, Giulia and Mazzoli, Alida and Forcellese, Archimede and Gigante, Antonio},
+  date = {2022-07-13},
+  journaltitle = {Sensors},
+  shortjournal = {Sensors},
+  volume = {22},
+  number = {14},
+  pages = {5242},
+  issn = {1424-8220},
+  doi = {10.3390/s22145242},
+  url = {https://www.mdpi.com/1424-8220/22/14/5242},
+  urldate = {2024-02-05},
+  abstract = {In hip arthroplasty, preoperative planning is fundamental to reaching a successful surgery. Nowadays, several software tools for computed tomography (CT) image processing are available. However, research studies comparing segmentation tools for hip surgery planning for patients affected by osteoarthritic diseases or osteoporotic fractures are still lacking. The present work compares three different software from the geometric, dimensional, and usability perspectives to identify the best three-dimensional (3D) modelling tool for the reconstruction of pathological femoral heads. Syngo.via Frontier (by Siemens Healthcare) is a medical image reading and post-processing software that allows low-skilled operators to produce prototypes. Materialise (by Mimics) is a commercial medical modelling software. 3D Slicer (by slicer.org) is an open-source development platform used in medical and biomedical fields. The 3D models reconstructed starting from the in vivo CT images of the pathological femoral head are compared with the geometries obtained from the laser scan of the in vitro bony specimens. The results show that Mimics and 3D Slicer are better for dimensional and geometric accuracy in the 3D reconstruction, while syngo.via Frontier is the easiest to use in the hospital setting.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/F9ZW93KQ/Mandolini et al. - 2022 - Comparison of Three 3D Segmentation Software Tools.pdf}
+}
+
 @article{mashiatullaValidationCorticalBone2017,
   title = {Validation of Cortical Bone Mineral Density Distribution Using Micro-Computed Tomography},
   author = {Mashiatulla, Maleeha and Ross, Ryan D. and Sumner, D. Rick},
@@ -968,6 +986,24 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S1120179721003379},
   urldate = {2023-09-23},
   langid = {english}
+}
+
+@article{percianoInsight3DMicroCT2017,
+  title = {Insight into {{3D}} Micro-{{CT}} Data: Exploring Segmentation Algorithms through Performance Metrics},
+  shorttitle = {Insight into {{3D}} Micro-{{CT}} Data},
+  author = {Perciano, Talita and Ushizima, Daniela and Krishnan, Harinarayan and Parkinson, Dilworth and Larson, Natalie and Pelt, Daniël M. and Bethel, Wes and Zok, Frank and Sethian, James},
+  date = {2017-09-01},
+  journaltitle = {Journal of Synchrotron Radiation},
+  shortjournal = {J Synchrotron Rad},
+  volume = {24},
+  number = {5},
+  pages = {1065--1077},
+  issn = {1600-5775},
+  doi = {10.1107/S1600577517010955},
+  url = {https://scripts.iucr.org/cgi-bin/paper?S1600577517010955},
+  urldate = {2024-02-05},
+  abstract = {Three-dimensional (3D) micro-tomography (µ-CT) has proven to be an important imaging modality in industry and scientific domains. Understanding the properties of material structure and behavior has produced many scientific advances. An important component of the 3D µ-CT pipeline is image partitioning (or image segmentation), a step that is used to separate various phases or components in an image. Image partitioning schemes require specific rules for different scientific fields, but a common strategy consists of devising metrics to quantify performance and accuracy. The present article proposes a set of protocols to systematically analyze and compare the results of unsupervised classification methods used for segmentation of synchrotron-based data. The proposed dataflow for Materials Segmentation and Metrics (MSM) provides 3D micro-tomography image segmentation algorithms, such as statistical region merging (SRM),               k               -means algorithm and parallel Markov random field (PMRF), while offering different metrics to evaluate segmentation quality, confidence and conformity with standards. Both experimental and synthetic data are assessed, illustrating quantitative results through the MSM dashboard, which can return sample information such as media porosity and permeability. The main contributions of this work are: (i) to deliver tools to improve material design and quality control; (ii) to provide datasets for benchmarking and reproducibility; (iii) to yield good practices in the absence of standards or ground-truth for ceramic composite analysis.},
+  file = {/home/ro/Zotero/storage/BSAWM849/Perciano et al. - 2017 - Insight into 3D micro-CT data exploring segmentat.pdf}
 }
 
 @article{perezRecentAdvancesWearable2021,
@@ -1159,12 +1195,44 @@
   file = {/home/ro/Zotero/storage/INZIS6S4/Schneider et al. - 2020 - Advancing proton minibeam radiation therapy magne.pdf}
 }
 
+@article{sheppardTechniquesHelicalScanning2014,
+  title = {Techniques in Helical Scanning, Dynamic Imaging and Image Segmentation for Improved Quantitative Analysis with {{X-ray}} Micro-{{CT}}},
+  author = {Sheppard, Adrian and Latham, Shane and Middleton, Jill and Kingston, Andrew and Myers, Glenn and Varslot, Trond and Fogden, Andrew and Sawkins, Tim and Cruikshank, Ron and Saadatfar, Mohammad and Francois, Nicolas and Arns, Christoph and Senden, Tim},
+  date = {2014-04},
+  journaltitle = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  shortjournal = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  volume = {324},
+  pages = {49--56},
+  issn = {0168583X},
+  doi = {10.1016/j.nimb.2013.08.072},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0168583X14000457},
+  urldate = {2024-02-05},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/FJDBF5T6/Sheppard et al. - 2014 - Techniques in helical scanning, dynamic imaging an.pdf}
+}
+
 @online{slicercommunity3DSlicerImage2022,
   title = {{{3D Slicer}} Image Computing Platform},
   author = {{Slicer Community}},
   date = {2022-11-22},
   url = {https://www.slicer.org/},
   urldate = {2023-09-17},
+  langid = {english}
+}
+
+@article{smistadMedicalImageSegmentation2015,
+  title = {Medical Image Segmentation on {{GPUs}} – {{A}} Comprehensive Review},
+  author = {Smistad, Erik and Falch, Thomas L. and Bozorgi, Mohammadmehdi and Elster, Anne C. and Lindseth, Frank},
+  date = {2015-02},
+  journaltitle = {Medical Image Analysis},
+  shortjournal = {Medical Image Analysis},
+  volume = {20},
+  number = {1},
+  pages = {1--18},
+  issn = {13618415},
+  doi = {10.1016/j.media.2014.10.012},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1361841514001819},
+  urldate = {2024-02-05},
   langid = {english}
 }
 
@@ -1295,6 +1363,23 @@
   file = {/home/ro/Zotero/storage/F5J5YKMS/Vicarelli - 2019 - The creation of the National Health System in Ital.pdf}
 }
 
+@article{virziComprehensiveReview3D2020,
+  title = {Comprehensive {{Review}} of {{3D Segmentation Software Tools}} for {{MRI Usable}} for {{Pelvic Surgery Planning}}},
+  author = {Virzì, Alessio and Muller, Cécile Olivia and Marret, Jean-Baptiste and Mille, Eva and Berteloot, Laureline and Grévent, David and Boddaert, Nathalie and Gori, Pietro and Sarnacki, Sabine and Bloch, Isabelle},
+  date = {2020-02},
+  journaltitle = {Journal of Digital Imaging},
+  shortjournal = {J Digit Imaging},
+  volume = {33},
+  number = {1},
+  pages = {99--110},
+  issn = {0897-1889, 1618-727X},
+  doi = {10.1007/s10278-019-00239-7},
+  url = {http://link.springer.com/10.1007/s10278-019-00239-7},
+  urldate = {2024-02-05},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/MYATLPQ3/Virzì et al. - 2020 - Comprehensive Review of 3D Segmentation Software T.pdf}
+}
+
 @software{voitLaTeXKOMAtemplate2022,
   title = {{{LaTeX-KOMA-template}}},
   author = {Voit, Karl},
@@ -1385,6 +1470,24 @@
   abstract = {In this study, we report our experience in commissioning a commercial treatment planning system (TPS) for fast-raster scanning of carbon-ion beams. This TPS uses an analytical dose calculation algorithm, a pencil-beam model with a triple Gaussian form for the lateral-dose distribution, and a beam splitting algorithm to consider lateral heterogeneity in a medium. We adopted the mixed beam model as the relative biological effectiveness (RBE) model for calculating the RBE values of the scanned carbon-ion beam. To validate the modeled physical dose, we compared the calculations with measurements of various relevant quantities as functions of the field size, range and width of the spread-out Bragg peak (SOBP), and depth–dose and lateral-dose profiles for a 6-mm SOBP in water. To model the biological dose, we compared the RBE calculated with the newly developed TPS to the RBE calculated with a previously validated TPS that is in clinical use and uses the same RBE model concept. We also performed patient-specific measurements to validate the dose model in clinical situations. The physical beam model reproduces the measured absolute dose at the center of the SOBP as a function of field size, range, and SOBP width and reproduces the dose profiles for a 6-mm SOBP in water. However, the profiles calculated for a heterogeneous phantom have some limitations in predicting the carbon-ion-beam dose, although the biological doses agreed well with the values calculated by the validated TPS. Using this dose model for fast-raster scanning, we successfully treated more than 900 patients from October 2018 to October 2020, with an acceptable agreement between the TPS-calculated and measured dose distributions. We conclude that the newly developed TPS can be used clinically with the understanding that it has limited accuracies for heterogeneous media.},
   langid = {english},
   file = {/home/ro/Zotero/storage/BMYZ4ZM3/Yagi et al. - 2022 - Commissioning a newly developed treatment planning.pdf}
+}
+
+@article{yushkevichUserguided3DActive2006,
+  title = {User-Guided {{3D}} Active Contour Segmentation of Anatomical Structures: {{Significantly}} Improved Efficiency and Reliability},
+  shorttitle = {User-Guided {{3D}} Active Contour Segmentation of Anatomical Structures},
+  author = {Yushkevich, Paul A. and Piven, Joseph and Hazlett, Heather Cody and Smith, Rachel Gimpel and Ho, Sean and Gee, James C. and Gerig, Guido},
+  date = {2006-07},
+  journaltitle = {NeuroImage},
+  shortjournal = {NeuroImage},
+  volume = {31},
+  number = {3},
+  pages = {1116--1128},
+  issn = {10538119},
+  doi = {10.1016/j.neuroimage.2006.01.015},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1053811906000632},
+  urldate = {2024-02-05},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/VSZBLNNQ/Yushkevich et al. - 2006 - User-guided 3D active contour segmentation of anat.pdf}
 }
 
 @article{zenzesMicroCTDataEarly2021,
