--- a/includes/proposal/masterthesis-definitions.sty
+++ b/includes/proposal/masterthesis-definitions.sty
@@ -19,8 +19,8 @@
 
 \graphicspath{{images/}}    %Direction where LaTeX will look for the images.
 
-\addbibresource{includes/shared-preamble-mainreferences.bib}  %Imports bibliography file
-\addbibresource{includes/shared-preamble-tweetreferences.bib} %Imports bibliography file
+%%\addbibresource{includes/shared-preamble-mainreferences.bib}  %Imports bibliography file
+%%\addbibresource{includes/shared-preamble-tweetreferences.bib} %Imports bibliography file
 \addbibresource{includes/medtec.bib} %Imports bibliography file
 
 \newcommand{\tweet}[1]{%
