--- a/includes/proposal/part03-page1-bibliography.tex
+++ b/includes/proposal/part03-page1-bibliography.tex
@@ -1,3 +1,5 @@
 %!TEX root = ../../proposal.tex
 \newpage
-\printbibliography[heading=bibintoc,title={References}]
+\rmfamily
+\section{References}
+\printbibliography[heading=none]
