--- a/includes/proposal/part01-page3-abstract.tex
+++ b/includes/proposal/part01-page3-abstract.tex
@@ -12,27 +12,14 @@
 \AbstractHead{Abstract in English}
 \noindent
 \normalsize
-Despite the theory of efficient market hypothesis some researchers suggest that stock prices can at least partly predicted.
-Nowadays Twitter contains a public opinion for every topic as the social media platform gets more popular.
-
-This thesis extracts tweets using DMI-TCAT for five automotive manufacturing companies.
-In total \num{11565283} tweets have been captured in the time frame between \printdate{2018-02-28} and \printdate{2018-09-07}.
-The indicators were compared with the share price of the companies using Granger analysis.
-
-It is shown that the share prices of ford and hyundai cannot be predicted very well as only one test of the Granger analysis was significant.
-Furthermore, both svm and nb classifiers outperformed the tb classifier, which was the reference value during the analysis.
-
-% Many studies have been published which are trying to predict the stock market movement.
-% The efficient market hypothesis states that the movements depend on news which are per definition not predictable the stock will follow a random walk pattern.
-% Nevertheless some researchers suggest that stock prices are at least partly predictable. 
-% On the other hand there are many internet users microblogging today on services like Twitter.
-% As the count of characters is limited on Twitter users have to be concise about the topic to write.
+\lipsum[1]
 
 \SomeSpace
 \AbstractHead{Keywords}
+\label{s:Keywords}
 \normalsize
 \noindent
-Efficient Market Hypothesis, Stock Price, Twitter, Sentiment Classification
+$\mu$CT, 3D Slicer, Segmentation, ITK-SNAP
 
 \glsresetall
 \SomeSpace
@@ -40,21 +27,12 @@ Efficient Market Hypothesis, Stock Price, Twitter, Sentiment Classification
 \AbstractHead{Abstract in German}
 \noindent
 \normalsize
-Trotz der Theorie der Effizienten Markt Hypothese meinen manche Forscher, dass Aktienkurse zumindest teilweise vorhergesagt werden können.
-Heutzutage ist auf Plattformen wie Twitter zu jedem beliebigen Thema eine Meinung zu finden.
-
-Diese vorliegende Arbeit extrahiert Tweets mittels DMI-TCAT für fünf Automobilhersteller.
-Insgesamt wurden 11565283 Tweets in einem Zeitraum zwischen 28.02.2018 und 07.09.2018 erfasst.
-Im Anschluss wurden vier verschiedene Sentiment Klassifizierungs Alogrithmen (tb, nb, me and svm) auf die gesammelten Tweets angewandt, um Indikatoren für die öffentliche Stimmung zu den jeweiligen Firmen zu extrahieren.
-Diese Indikatoren wurden mit den Aktienkursen des jeweiligen Unternehmens mittels Granger Analyse verglichen.
-
-Dabei hat sich gezeigt, dass die Aktienkurse von ford und hyundai sehr schlecht vorhergesagt werden konnten, da nur ein einziger Granger Test signifikant war.
-Weiters wurde gezeigt, dass die svm und nb Klassifizierungsalgorithmen dem Referenzalgorithmus tb überlegen sind.
+\lipsum[1]
 
 \SomeSpace
 \AbstractHead{Keywords}
 \normalsize
 \noindent
-Effiziente Markt Hypothese, Aktienkurs, Twitter, Sentiment Klassifizierung
+$\mu$CT, 3D Slicer, Segmentation, ITK-SNAP
 
 \glsresetall
